--- a/FrontEnd/subir.html
+++ b/FrontEnd/subir.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Sube tu proyecto</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <h1>Sube tu proyecto</h1>
@@ -75,13 +76,14 @@
 <h2>Editar o eliminar proyecto existente</h2>
 
 <div>
-  <label>ID del proyecto:</label><br />
-  <input type="text" id="editId" placeholder="Copia aquí el ID del proyecto" />
+  <label>Título del proyecto:</label><br />
+  <input type="text" id="editTitulo" placeholder="Escribe el título exactamente" />
 </div>
 
 <button type="button" id="btnCargarProyecto">Cargar datos</button>
 <button type="button" id="btnGuardarCambios">Guardar cambios</button>
 <button type="button" id="btnBorrarProyecto">Eliminar proyecto</button>
+
 
 </body>
 </html>
