--- a/Admin/admin.html
+++ b/Admin/admin.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Panel admin - Repositorio</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <h1>Panel de administración</h1>
