--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -19,7 +19,7 @@
     <nav>
       <a href="index.html">Inicio</a>
       <a href="subir.html">Sube tu proyecto</a>
-      <a href="admin/admin.html">Panel de administración</a>
+      <a href="Admin/admin.html">Panel de administración</a>
     </nav>
 
     <hr />
