Mejora subir.js api imagenes

--- a/FrontEnd/subir.html
+++ b/FrontEnd/subir.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Sube tu proyecto</title>
   <link rel="stylesheet" href="styles.css" />
+  <script src="https://upload-widget.cloudinary.com/latest/CloudinaryUploadWidget.js"></script>
 </head>
 <body>
   <header>
@@ -120,6 +121,7 @@
         Si tu proyecto ya ha sido aprobado y publicado, puedes editarlo para actualizar la información
         o solicitar su eliminación del repositorio. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
       </p>
+      <br>
 
       <div style="margin-bottom: 16px;">
         <button type="button" id="btnToggleEditar" class="btn-secundario">
